--- a/RestaurantProject/RestaurantProject/RestaurantProject.csproj
+++ b/RestaurantProject/RestaurantProject/RestaurantProject.csproj
@@ -10,4 +10,8 @@
   <ItemGroup>
     <None Include="bin\Debug\net7.0\appsettings.json" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
+  </ItemGroup>
 </Project>
