--- a/RestuarantProjectMVC/RestuarantProjectMVC/RestuarantProjectMVC.csproj
+++ b/RestuarantProjectMVC/RestuarantProjectMVC/RestuarantProjectMVC.csproj
@@ -2,10 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="Remote.Linq.Newtonsoft.Json" Version="7.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="bootstrap" Version="5.2.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Views\RestaurantMVC\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\RestaurantMVC\" />
+  </ItemGroup>
 </Project>
